2015-06-15  Alper Ipek <3denizotesi@gmail.com>
    * Filtering capability while sending alerts (by package name and version) (3.0.0)

2015-01-24  Alper Ipek <3denizotesi@gmail.com>
    * Query optimization for enormous size of subscriber and device (2.0.0)

2015-01-13  Alper Ipek <3denizotesi@gmail.com>
    * Strict JSON request validation with schema definition (1.3.0)

2015-01-09  Alper Ipek <3denizotesi@gmail.com>
    * Pika reconnection for idle clients (1.2.0)

2015-01-09  Alper Ipek <3denizotesi@gmail.com>
    * Make heartbeat interval configurable (1.1.0)

2015-01-08  Alper Ipek <3denizotesi@gmail.com>
    * Initial release (1.0.0) of PNS (Push Notification Service)