@@ -1,5 +1,5 @@
 {
   "name": "pns",
-  "version": "3.2.0",
+  "version": "3.3.0",
   "description": "Push Notification Service"
 }
