@@ -1,28 +1,29 @@
 ## The following requirements were added by pip freeze:
-alembic==0.7.6
+alembic==0.8.3
 apns-clerk==0.2.0
-cffi==1.1.2
-cryptography==0.9.2
+cffi==1.3.1
+cryptography==1.1.1
 enum34==1.0.4
 Flask==0.10.1
-Flask-SQLAlchemy==2.0
-Flask-WTF==0.11
+Flask-SQLAlchemy==2.1
+Flask-WTF==0.12
 gunicorn==19.3.0
 idna==2.0
-ipaddress==1.0.7
+ipaddress==1.0.15
 itsdangerous==0.24
-Jinja2==2.7.3
-Mako==1.0.1
+Jinja2==2.8
+Mako==1.0.3
 MarkupSafe==0.23
-pika==0.9.14
+pika==0.10.0
 psycopg2==2.6.1
-pyasn1==0.1.8
+pyasn1==0.1.9
 pycparser==2.14
 pyOpenSSL==0.15.1
-python-gcm==0.2
-requests==2.7.0
-schema==0.3.1
-six==1.9.0
-SQLAlchemy==1.0.6
-Werkzeug==0.10.4
+python-editor==0.4
+python-gcm==0.3
+requests==2.8.1
+schema==0.4.0
+six==1.10.0
+SQLAlchemy==1.0.9
+Werkzeug==0.11.2
 WTForms==2.0.2
