@@ -13,7 +13,7 @@ def read(filename):
 
 setup(
     name='pns',
-    version='3.2.0',
+    version='3.3.0',
     author='Alper IPEK',
     author_email='3denizotesi@gmail.com',
     url='https://github.com/Turksat/pns',
@@ -22,9 +22,9 @@ setup(
     packages=['pns', 'pns.controllers', 'pns.workers'],
     license="Apache 2.0",
     keywords='gcm apns push notification service',
-    install_requires=['Flask==0.10.1', 'Flask-SQLAlchemy==2.0', 'Flask-WTF==0.11.0',
-                      'pika==0.9.14', 'psycopg2==2.6.1', 'python-gcm==0.2', 'apns-clerk==0.2.0',
-                      'alembic==0.7.6'],
+    install_requires=['Flask==0.10.1', 'Flask-SQLAlchemy==2.1', 'Flask-WTF==0.12',
+                      'pika==0.10.0', 'psycopg2==2.6.1', 'python-gcm==0.3', 'apns-clerk==0.2.0',
+                      'alembic==0.8.3'],
     classifiers=['Development Status :: 2 - Pre-Alpha',
                  'Intended Audience :: Developers',
                  'License :: OSI Approved :: Apache Software License',
